--- a/css/mostrarArchivos.css
+++ b/css/mostrarArchivos.css
@@ -13,20 +13,12 @@
   text-align: center;
 }
 
-.imgMisantla{ 
-  position: absolute;
-  top: 10px;
-  left: 15px;
-  width: 150px;
-  height: 100px;      
-}
-
 .imgEmpresa{
   position: absolute;
   top: 10px;
-  right: 15px;
-  width: 304px;
-  height: 84px;
+  right: 5px;
+  width: 280px;
+  height: 154px;
 }
 
 .file-box {
@@ -70,7 +62,7 @@ td:first-child {
 
 th {
     font-weight: bold;
-    background-color: #D51668;
+    background-color: #5fdac9;
     
 }
 
@@ -79,7 +71,7 @@ a {
     color: #ffffff;
     display: inline-block;
     padding: 4px 8px;
-    background-color: #D51668;
+    background-color: #3ca9d8;
     color: #fff;
     border-radius: 4px;
     position:relative;
