--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,14 @@ body {
 }
 
 .form-container img {
-    width: 250px; /* Aumenta el tamaño de la imagen */
-    margin-bottom: 100px;
+    width: 500px; /* Aumenta el tamaño de la imagen */
+    margin-bottom: 10px;
 }
 
 .form-container h1 {
     text-align: center;
     margin-bottom: 50px;
+    color: #131842;
 }
 
 .form-container form {
@@ -109,14 +110,14 @@ body {
     padding: 10px;
     font-size: 16px;
     color: #fff;
-    background-color: #269174;
+    background-color: #179BAE;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .form-container form .btn:hover {
-    background-color: #046C51;
+    background-color: #4158A6;
 }
 
 
