--- a/css/style2.css
+++ b/css/style2.css
@@ -1,24 +1,32 @@
 .titulo{
-    color: #000000;
+    color: #131842;
     font-size: 48px;
     font-family: "Atkinson Hyperlegible", sans-serif;
     text-align: center;
 }
 
 .subtitulo{
-    color: #120e0e;
+    color: #131842;
     font-size: 38px;
     font-family: "Atkinson Hyperlegible", sans-serif;
     text-align: center;
 }
 
-.imglogoPrincipal {
-        width: 250px;
-        height: 200px;
+.imglogoPrincipal{ 
+        width: 200px;
+        height: 150px;
         position: absolute;
         top: 0;
-        right: 0;
+        right: 0;   
     }
+    
+    /* Media query para pantallas de 800px o menos */
+    @media (max-width: 1045px) {
+        .imglogoPrincipal {
+            display: none; /* Ocultar la imagen */
+        }
+    }
+    
 
 .btnMenu{
     background-image: url('../img/menu.png');
@@ -35,31 +43,38 @@
     background-size: 60px 60px;
     padding-left: 70px; /* Ajusta este valor para dar espacio a la imagen */
 }
-/* Contenedor de los botones para centrar */
+/* Contenedor de los botones */
 .button-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    flex-direction: column; /* Apila los botones verticalmente */
-    margin-top: 50px; /* Espaciado superior para ajustar la posición */
 }
 
 /* Estilo de los botones */
 button {
     width: 100%;
-    max-width: 328px;
+    max-width: 450px;
     height: 100px;
     flex-shrink: 0;
     border-radius: 30px;
-    background: #64C27B;
-    color: #191717;
-    text-align: center;
-    font-size: 40px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #134B70;
+    color: #e4e5f1;
+    text-align: left; /* Alinear el texto a la izquierda */
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-bottom: 10px;
     transition: background-color 0.3s;
+    display: flex; /* Usar flexbox para alinear elementos */
+    justify-content: space-between; /* Espacio entre texto e imagen */
+    align-items: center; /* Centrar verticalmente */
+    padding: 0 20px; /* Espacio entre el contenido y los bordes */
+}
+
+button img {
+    margin-left: 15px; /* Espacio entre el texto y la imagen */
+    height: 60px; /* Ajusta la altura de la imagen */
 }
 
 button:hover {
-    background-color: #29bc95;
+    background-color: #508C9B;
 }
