--- a/css/mostrarArchivos.css
+++ b/css/mostrarArchivos.css
@@ -1,31 +1,34 @@
-.titulo{
+.titulo {
   color: #000000;
   font-size: 38px;
   font-family: "Shippori Antique", sans-serif;
   text-align: center;
-  
 }
 
-.subtitulo{
+.subtitulo {
   color: #000000;
   font-size: 25px;
   font-family: "Shippori Antique", sans-serif;
   text-align: center;
 }
- /* Estilos para el formulario de búsqueda */
- .search-container {
+
+/* Estilos para el formulario de búsqueda */
+.search-container {
   margin: 30px 0;
   display: flex;
+  flex-direction: column; /* Cambiar a columna para móviles */
   align-items: center;
 }
+
 .search-container input[type="text"] {
   border: 2px solid #ddd;
   border-radius: 25px;
   padding: 10px;
   font-size: 16px;
-  flex: 2;
-  margin-right: 10px;
+  flex: 1;
+  margin-bottom: 10px; /* Espacio entre el input y el botón en móviles */
 }
+
 .search-container button {
   padding: 10px 20px;
   border-radius: 20px; /* Borde redondeado */
@@ -33,13 +36,13 @@
   background-color: #45bcda;
   color: white;
   cursor: pointer;
-  margin-left: 10px;
   font-size: 16px;
+  width: 100%; /* Ajustar ancho al 100% en móviles */
 }
+
 .search-container button:hover {
   background-color: #19a7ff;
 }
-
 
 .imgEmpresa {
   position: absolute;
@@ -53,74 +56,88 @@
 /* Ajustes para pantallas más pequeñas */
 @media (max-width: 1200px) {
   .imgEmpresa {
-    width: 220px;
-    height: auto; /* Mantiene la proporción del logo */
-    top: 8px;
-    right: 4px;
+      width: 220px;
+      height: auto; /* Mantiene la proporción del logo */
+      top: 8px;
+      right: 4px;
   }
 }
 
 @media (max-width: 992px) {
   .imgEmpresa {
-    width: 180px;
-    height: auto; /* Mantiene la proporción del logo */
-    top: 6px;
-    right: 3px;
+      width: 180px;
+      height: auto; /* Mantiene la proporción del logo */
+      top: 6px;
+      right: 3px;
+  }
+
+  .titulo {
+      font-size: 28px; /* Reducir tamaño del título en móviles */
+  }
+
+  .subtitulo {
+      font-size: 20px; /* Reducir tamaño del subtítulo en móviles */
   }
 }
 
 @media (max-width: 768px) {
   .imgEmpresa {
-    width: 150px;
-    height: auto; /* Mantiene la proporción del logo */
-    top: 5px;
-    right: 2px;
+      width: 150px;
+      height: auto; /* Mantiene la proporción del logo */
+      top: 5px;
+      right: 2px;
   }
 }
 
 @media (max-width: 576px) {
   .imgEmpresa {
-    width: 120px;
-    height: auto; /* Mantiene la proporción del logo */
-    top: 4px;
-    right: 1px;
+      width: 120px;
+      height: auto; /* Mantiene la proporción del logo */
+      top: 4px;
+      right: 1px;
+  }
+
+  .titulo {
+      font-size: 24px; /* Ajustar más el tamaño del título en móviles */
+  }
+
+  .subtitulo {
+      font-size: 18px; /* Ajustar más el tamaño del subtítulo en móviles */
   }
 }
 
-
 .file-box {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    width: 300px; /* Ajusta el ancho según tus necesidades */
-  }
-  
-  .file-icon {
-    width: 24px;
-    height: 24px;
-    margin-right: 10px;
-  }
-  
-  .file-name {
-    margin: 0;
-  }
-  
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    font-family: "Shippori Antique", sans-serif;
-    text-align: center; /* Centra el contenido dentro de la tabla */
-    margin: 0 auto; /* Centra la tabla en el contenedor */
-    
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  width: 100%; /* Ajustar al 100% del contenedor en móviles */
+  max-width: 300px; /* Mantener un tamaño máximo */
+}
+
+.file-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.file-name {
+  margin: 0;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  font-family: "Shippori Antique", sans-serif;
+  text-align: center; /* Centra el contenido dentro de la tabla */
+  margin: 0 auto; /* Centra la tabla en el contenedor */
 }
 
 th, td {
-    padding: 8px;
-    border: 1px solid #ccc;
-   
+  padding: 8px;
+  border: 1px solid #ccc;
 }
 
 td:first-child {
@@ -128,41 +145,39 @@ td:first-child {
 }
 
 th {
-    font-weight: bold;
-    background-color: #5fdac9;
-    
+  font-weight: bold;
+  background-color: #5fdac9;
 }
 
 a {
-    text-decoration: none;
-    color: #ffffff;
-    display: inline-block;
-    padding: 4px 8px;
-    background-color: #3ca9d8;
-    color: #fff;
-    border-radius: 4px;
-    position:relative;
-}
-.regresar-home{
   text-decoration: none;
-    color: #333;
-    display: inline-block;
-    padding: 4px 8px;
-    background-color: #5CA0BB;
-    color: #fff;
-    border-radius: 4px;
-    position:relative;
-    left:80px;
+  color: #ffffff;
+  display: inline-block;
+  padding: 4px 8px;
+  background-color: #3ca9d8;
+  color: #fff;
+  border-radius: 4px;
+  position:relative;
+}
+
+.regresar-home {
+  text-decoration: none;
+  color: #333;
+  display: inline-block;
+  padding: 4px 8px;
+  background-color: #5CA0BB;
+  color: #fff;
+  border-radius: 4px;
+  position: relative;
+  left: 80px;
 }
 
 .icon {
-    width: 45px;
-    height: 45px;
-    margin-right: 5px;
-    vertical-align: middle;
-    align-items: center;
-    
-    
+  width: 45px;
+  height: 45px;
+  margin-right: 5px;
+  vertical-align: middle;
+  align-items: center;
 }
 
 /* Estilo para el botón de eliminar */
@@ -175,6 +190,7 @@ a {
   border-radius: 5px;
   align-items: center;
 }
+
 h2 {
   color: #000000;
   font-size: 22px;
@@ -183,14 +199,13 @@ h2 {
   margin-bottom: 50px; /* Puedes ajustar el valor según tus necesidades */
 }
 
-
-
-.totalFolios{
+.totalFolios {
   color: #000000;
   font-size: 25px;
   font-family: "Shippori Antique", sans-serif;
-  text-align:right;
+  text-align: right;
 }
+
 .paginacion a.selected {
   background-color: #A69465;
   color: white;
