--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,18 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 
 .carousel {
-    display: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
 }
 
 .carousel .slide {
@@ -60,19 +67,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 100%;
     padding: 50px;
-    margin: 0 auto; /* Añade esta línea para centrar horizontalmente */
+    margin: 0 auto;
+    text-align: center;
 }
 
 .form-container {
     width: 100%;
     max-width: 600px;
-    text-align: center; /* Añade esta línea para centrar la imagen */
 }
 
 .form-container img {
-    width: 500px; /* Aumenta el tamaño de la imagen */
+    width: 100%;
+    max-width: 500px;
     margin-bottom: 10px;
 }
 
@@ -120,12 +128,22 @@ body {
     background-color: #4158A6;
 }
 
+@media(max-width: 991px) {
+    .carousel {
+        display: none;
+    }
+}
 
 @media(min-width: 992px) {
-    .carousel {
-        display: block;
+    .container {
+        flex-direction: row;
+    }
+
+    .form-section {
         width: 50%;
-        overflow: hidden;
-        position: relative;
+    }
+
+    .carousel {
+        width: 50%;
     }
 }
