--- a/css/mostrarArchivos.css
+++ b/css/mostrarArchivos.css
@@ -1,3 +1,13 @@
+/* Estilos para ocultar elementos al imprimir */
+@media print {
+  .search-container,
+  .search-container * {
+    display: none !important;
+  }
+}
+
+/* Otros estilos... */
+
 .titulo {
   color: #000000;
   font-size: 38px;
@@ -5,9 +15,16 @@
   text-align: center;
 }
 
-.subtitulo {
+@media print {
+  p {
+    margin-top: 100px; /* Ajusta este valor según sea necesario */
+  }
+}
+
+
+p {
   color: #000000;
-  font-size: 25px;
+  font-size: 20px;
   font-family: "Shippori Antique", sans-serif;
   text-align: center;
 }
@@ -16,7 +33,7 @@
 .search-container {
   margin: 30px 0;
   display: flex;
-  flex-direction: column; /* Cambiar a columna para móviles */
+  flex-direction: column;
   align-items: center;
 }
 
@@ -26,23 +43,25 @@
   padding: 10px;
   font-size: 16px;
   flex: 1;
-  margin-bottom: 10px; /* Espacio entre el input y el botón en móviles */
+  margin-bottom: 10px;
 }
 
 .search-container button {
   padding: 10px 20px;
-  border-radius: 20px; /* Borde redondeado */
+  border-radius: 20px;
   border: none;
   background-color: #45bcda;
   color: white;
   cursor: pointer;
   font-size: 16px;
-  width: 100%; /* Ajustar ancho al 100% en móviles */
+  width: 100%;
 }
 
 .search-container button:hover {
   background-color: #19a7ff;
 }
+
+
 
 .imgEmpresa {
   position: absolute;
@@ -207,6 +226,6 @@ h2 {
 }
 
 .paginacion a.selected {
-  background-color: #A69465;
+  background-color: #62cb95;
   color: white;
 }
