--- a/css/mostrarArchivos.css
+++ b/css/mostrarArchivos.css
@@ -33,32 +33,32 @@ p {
 .search-container {
   margin: 30px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center; /* Centra el contenedor */
+  align-items: center; /* Alinea los elementos en la misma línea */
 }
 
 .search-container input[type="text"] {
   border: 2px solid #ddd;
   border-radius: 25px;
-  padding: 10px;
+  padding: 15px;
   font-size: 16px;
   flex: 1;
-  margin-bottom: 10px;
+  margin-right: 5px; /* Espacio entre el input y el botón */
 }
 
 .search-container button {
-  padding: 10px 20px;
+  padding: 15px 15px; /* Tamaño reducido del botón */
   border-radius: 20px;
   border: none;
-  background-color: #45bcda;
+  background-color: #434b4d;
   color: white;
   cursor: pointer;
-  font-size: 16px;
-  width: 100%;
+  font-size: 14px; /* Tamaño de fuente más pequeño */
+  width: auto; /* Ajuste automático según el contenido */
 }
 
 .search-container button:hover {
-  background-color: #19a7ff;
+  background-color: #546774;
 }
 
 
