--- a/css/mostrarArchivos.css
+++ b/css/mostrarArchivos.css
@@ -311,14 +311,16 @@ h2 {
   font-family: "Shippori Antique", sans-serif;
 }
 
-.imprimir-pdf-btn a {
+.imprimir-pdf-btn button {
+  text-align: right;
+  font-family: "Shippori Antique", sans-serif;
   background-color: #187542;
   color: white;
-  padding: 10px 20px;
+  padding: 10px 15px;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
-.imprimir-pdf-btn a:hover {
+.imprimir-pdf-btn button:hover {
   background-color: #4d8350;
 }
