--- a/css/modal.css
+++ b/css/modal.css
@@ -1,3 +1,34 @@
+/* Estilos para el contenedor de botones */
+.imprimir-pdf-btn {
+    /* display: inline-block; */
+    margin-right: 10px;
+    float: right; /* Ubica el contenedor a la derecha */
+}
+
+.imprimir-pdf-btn button {
+    padding: 12px 20px;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.imprimir-pdf-btn button:hover {
+    opacity: 0.9;
+}
+
+/* Color diferente para cada botón */
+.imprimir-pdf-btn:nth-child(1) button {
+    background-color: #387478; /* Color para el botón de TDP */
+}
+
+.imprimir-pdf-btn:nth-child(2) button {
+    background-color: #007bff; /* Color para el botón de Municipio */
+}
+
 /* Estilos para el modal */
 .modal {
     display: none;
@@ -20,6 +51,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
+    position: relative;
 }
 
 .modal h2 {
@@ -58,25 +90,35 @@
 }
 
 .modal textarea {
-    resize: vertical; /* Permite que el usuario ajuste el tamaño verticalmente */
-    min-height: 80px; /* Altura mínima para una buena visualización */
+    resize: vertical;
+    min-height: 80px;
 }
 
+/* Estilos para los botones del modal */
 .modal button {
-    width: 100%;
-    padding: 15px;
-    background-color: #387478;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
+    width: 48%;
+    padding: 12px;
     font-size: 0.9rem;
     font-weight: 600;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-right: 4%;
 }
 
+.modal button:nth-of-type(1) {
+    background-color: #387478;
+}
+
+.modal button:nth-of-type(2) {
+    background-color: #007bff;
+}
+
+/* Ajustes de hover para los botones del modal */
 .modal button:hover {
-    background-color: #3d989e;
+    opacity: 0.9;
 }
 
 .close {
